LMS.App/ClientApp/src/styles.css
/* ... */
.button-list-grid {
  position: absolute;
  top: -76px;
  right: 0;
}

.function-btns {
  padding: 16px 32px;
}

.function-btns img {
  margin-bottom: 5px;
}

/* .schoolgrid-header .pinned-grid-chat {
  position: absolute;
  right: 0;
} */

.school-grid-thumbnail .school-large-thumbnail {
  height: 100%;
  display: flex;
  overflow: hidden;
}

.school-grid-thumbnail .medium-thumnail {
  display: flex;
  height: 180px;
  overflow: hidden;
}

.school-grid-thumbnail .medium-thumnail:first-child {
  margin-bottom: 0.25rem;
}

.school-grid-footer.above-thumbnail {
  position: absolute;
  bottom: 30px;
}

.shadow-thumnail:after {
  content: "";
  background: linear-gradient(
    0deg,
    rgba(0, 0, 0, 0.8) 0%,
    rgba(86, 86, 86, 0) 100%
  );
  height: 100px;
}

.shadow-thumnail:after {
  content: "";
  background: linear-gradient(
    0deg,
    rgba(0, 0, 0, 0.8) 0%,
    rgba(86, 86, 86, 0) 100%
  );
  height: 100px;
  position: absolute;
  bottom: 0;
  width: 100%;
}

.school-list-box .school-large-thumbnail {
  height: 150px;
  border-radius: 4px;
}

.school-list-box .school-large-thumbnail:after {
  display: none;
}

.date-view-list {
  margin-bottom: 16px;
}

.list-schol-profile > .row > div {
  margin-bottom: 16px;
}

.school-grid-thumbnail img,
.school-grid-thumbnail video {
  object-fit: cover;
  max-height: 100%;
}

.medium_thumbox {
  flex-flow: column;
  justify-content: space-between;
}

.school-grid-footer.preview-right-action {
  display: flex;
  flex-flow: column;
  position: absolute;
  right: 10px;
  z-index: 9;
  bottom: -18px;
}

.preview-right-action button {
  padding: 0;
  margin-bottom: 13px;
}

.preview-right-action .function-btns img {
  max-height: 16px;
}

.preview-right-action button {
  padding: 0;
  margin-bottom: 13px;
  font-size: 14px;
}

.class-preview-right {
  padding-right: 60px;
}

.class-preview-right .hashtag_box {
  margin-top: 20px;
}

.school-grid-footer.preview-right-action {
  display: flex;
  flex-flow: column;
  position: absolute;
  right: 10px;
  z-index: 9;
  bottom: -10px;
}

.close-preview {
  position: absolute;
  right: 16px;
}

.edit-sprofilebtn {
  background: rgba(124, 141, 167, 0.05) !important;
  border-radius: 32px;
  padding: 8px 16px;
  transition: 0.4s all;
  cursor: pointer;
}

.edit-sprofilebtn:hover {
  background: rgb(124 141 167 / 33%) !important;
}

.edit-profilehover:hover .edit-sprofilebtn {
  opacity: 1;
}

/*---- Modal css start here  ---*/
.modal-header .btn-close {
  position: absolute;
}

.edit-school-modal .modal-dialog {
  max-width: 700px;
}

.edit-school-modal .modal-content {
  background: #ffffff;
  border: 1px solid #f1f7ff;
  box-shadow: 0px 4px 20px rgb(0 0 0 / 5%);
  border-radius: 16px;
}

.edit-school-modal .modal-header {
  padding: 30px 20px 15px;
}

.modal-header .btn-close {
  position: absolute;
  background: none;
  top: 60%;
  right: 35px;
  padding: 0;
  opacity: 1;
  transform: translateY(-50%);
}

.modal-school-icon {
  border: 2px solid #dee0e3;
  width: 200px;
  height: 200px;
  margin: 0 auto;
  background: #7c8da7;
}

.text-line-border:before {
  content: "";
  width: 100%;
  height: 1px;
  background: #f5f5f5;
  position: absolute;
  left: 0;
  top: 56%;
  transform: translateY(-50%);
}

.line-text {
  background-color: #fff;
  display: inline-block;
  position: relative;
  z-index: 999;
  padding: 0 5px;
}

textarea.ht_96 {
  height: 96px;
}

.resize-none {
  resize: none;
}

.hover-tags .custom-tag:hover {
  background: #7c8da7;
  color: #fafafa;
  padding-right: 25px;
  cursor: pointer;
}

.hover-tags .custom-tag .delete-tag {
  display: nonw;
}

.hover-tags .custom-tag:hover .delete-tag {
  display: block;
  top: 3px;
  right: 7px;
}

.owner-input select {
  padding-left: 84px;
}

.edit-school-modal .modal-body,
.edit-school-modal .modal-header,
.edit-school-modal .modal-footer {
  padding-left: 32px;
  padding-right: 32px;
}

.grid-active,
.list-active {
  display: block !important;
}

.cost_theme {
  color: #ff821c;
  margin-right: 8px;
}

.payment-profile {
  padding: 4px 16px;
  background: #fafafa;
  border-radius: 16px;
}

.classes-grid {
  border-radius: 4px;
}

.classes-grid .school-large-thumbnail {
  height: 28vh !important;
}

.classes-grid .school-grid-footer.above-thumbnail {
  position: absolute;
  bottom: 0px;
  z-index: 9;
}

.classes-grid .function-btns {
  padding: 16px 23px;
}

.start-date {
  color: #ff1c1c;
}

.language-tag .custom-tag {
  border: 1px solid #fafafa;
}

.School-prof-header .user-profile-header {
  width: 102px;
  height: 102px;
  min-width: 102px;
}

.minw-142 {
  min-width: 142px;
}

.School-prof-header .class-course-image {
  width: 150px;
  height: 150px;
  min-width: 150px;
}

.univ-logo {
  position: absolute;
  right: 54px;
  top: 0;
  width: 31px;
  height: 31px;
  display: flex;
  justify-content: center;
  border-radius: 50%;
  overflow: hidden;
}
.class_request {
  max-width: 750px;
}

.sepearator {
  color: #f5f5f5;
  margin: 0 24px;
}

.button-stroage {
  padding: 8px 24px;
  background: rgba(124, 141, 167, 0.05) !important;
  border-radius: 32px;
}

.schoolgrid-header .live-soon {
  margin: 0 46px;
}

.class-icon-profile {
  width: 150px;
  height: 150px;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}

.latest-form label {
  margin-left: 10px;
  color: #464e5f;
  font-family: "Montserrat", sans-serif;
  font-weight: 400;
  margin-bottom: 4.5px;
}

.latest-form .form-group {
  margin-bottom: 10px;
}

.post-attch-btn {
  width: 40px;
  height: 40px;
  min-width: 40px;
  border: 1px solid #fafafa;
  background: #fff;
  color: #7c8da7;
  transition: 0.3s all;
  margin-right: 16px;
  font-size: 12px;
  cursor: pointer;
}

.post-attch-btn svg {
  width: 20px;
  height: 20px;
  flex: 0 0 auto;
}

.post-attch-btn input {
  width: 0;
  margin: 0;
}

.media-sourcebtn button img {
  display: block;
}

.post-attch-btn .light-attach {
  display: none;
}
/* ... */

